# pypanasonic

./: LICENSE  LICENSE.txt  README.md  pyproject.toml  tea.yaml
src/pypanasonic/: __about__.py  __init__.py  mewtocol.py
