[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypanasonic"
version = "0.0.5"
description = "Panasonic PLC mewtocol lib via serial port"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["Panasonic", "Mewtocol", "Protocol", "Serial", "PLC"]
authors = [
  { name = "hy1stax", email = "130333760+hy1stax@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["regex",]

[project.urls]
Homepage = "https://github.com/hy1stax/pypanasonic"
Documentation = "https://github.com/hy1stax/pypanasonic/README.md"
Repository = "https://github.com/hy1stax/pypanasonic.git"
"Bug Tracker" = "https://github.com/hy1stax/pypanasonic/issues"
Changelog = "https://github.com/hy1stax/pypanasonic/CHANGELOG.md"

[tool.hatch.version]
path = "src/pypanasonic/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pypanasonic tests}"

[tool.coverage.run]
source_pkgs = ["pypanasonic", "tests"]
branch = true
parallel = true
omit = [
  "src/pypanasonic/__about__.py",
]

[tool.coverage.paths]
pypanasonic = ["src/pypanasonic", "*/pypanasonic/src/pypanasonic"]
tests = ["tests", "*/pypanasonic/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
